Fix table alignment

--- a/ClientApp/src/pages/execution.module.scss
+++ b/ClientApp/src/pages/execution.module.scss
@@ -2,6 +2,10 @@
     width: 100%;
 }
 
+.updateKey {
+    vertical-align: top;
+}
+
 .updateValue {
     overflow-x: auto;
     white-space: pre-wrap;
